# invest_monitor

./: .gitignore  AGENTS.md  README.md  learning.md  mkdocs.yml  onboarding.md  pyproject.toml  requirements.txt
data/: sample_portfolio.csv
docs/: ai-agents.md  benchmarks.md  cli.md  conversation-summaries.md  dashboard.md  data-model.md  developer.md  getting-started.md  income-and-swr.md  index.md  lookthrough.md  multi-agent-graph.md  performance-attribution.md  portfolio-groups.md  production.md  risk.md  wealth-projection.md
src/: agent_summaries.py  app.py  attribution.py  benchmarks.py  cli.py  collector.py  database.py  demo.py  env.py  models.py  production.py  reporting.py  scenarios.py  scheduler.py
src/agent/: __init__.py  agent.py  cio_agent.py  cio_skills.py  pm_skills.py  portfolio_manager_agent.py  report_export.py  research_agent.py  research_skills.py  skills.py  wealth_agent.py  wealth_skills.py
src/data/: ingestion.py
src/database/: database.py
src/trading_graph/: __init__.py  config.py  graph.py  routing.py  run.py  state.py
src/trading_graph/nodes/: __init__.py  cio.py  portfolio_manager.py  researcher.py  risk_manager.py
tests/: test_database.py  test_report_export.py  test_trading_graph_routing.py  test_trading_graph_smoke.py  test_trading_graph_state.py
