[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "duckdb>=1.4.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "scipy>=1.16.3",
    "tabulate>=0.9.0",
    "yfinance>=1.0",
]
